--- a/self_study/java/笔记.md
+++ b/self_study/java/笔记.md
@@ -359,17 +359,30 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
     int minimum，int maximum);构造一个新的滚动条 【orientation|ɔːriənˈteɪʃn方向；定向；适应】
 - 布局管理器：
   1. FlowLayout流式布局管理器（大小自动适应）</br>setLayout(new FlowLayout(FlowLAYOUT.RIGHT(右对齐，默认是左)))【jpanel默认】
-     > FlowLayout(int align,int hgap,int vgap)指定对齐方式和水平及垂直间距。
+     > FlowLayout(int align,int hgap,int vgap)指定对齐方式和水平及垂直间距。align可以取值FlowLayout.LEFT,FlowLayout.RIGHT和FlowLayout.CENTER三种
 
   2. BorderLayout边界布局管理器  
+     >BorderLayout(int hg,int vgap)
 
   3. GridLayout网格布局管理器（和网格组件大小变化）【Grid|ɡrɪd网格输电网】
+     >GridLayout(int rows,int cols)创建具有指定行数和列数的网格布局，GridLayout(int rows,int cols，int hgap,int vgap)指定行列，水平垂直间距
+     >不能两个都设置为0，一个为0，另一个具体而定
 
   4. CardLayout卡片布局管理器  
-  myCard = new CardLayout();   contentPane.setLayout(myCard);  
-        contentPane.add(p1,"First")first是p1的名字  contentPane.add(p1,"weo")
-  5. BoxLayout盒式布局管理器
-
+    myCard = new CardLayout();创建新的默认无间距的CardLayout布局管理器
+    contentPane.setLayout(myCard);  
+        contentPane.add(p1,"First")first是p1的名字  contentPane.add(p1,"weo").p1是容器JPanel
+        void first(Container parent)翻转到容器第一张卡片；
+        void next(Container parent)翻转到下一张卡片；
+        void previous(Container parent)翻转到上一张卡片； 【previous|ˈpriːviəs以前的，在…以前，前一个】
+        void show(Container Parent,String name)翻转到指定name的卡片
+  5. BoxLayout盒式布局管理器  定义在javax.swing包中的另一种常用的布局管理器.只有一行或者一列但是相对于的具有不同宽高
+       >BoxLayout(Container target,int axis)target是要设置的容器
+       >axis的参数有：BoxLayout.X_AXIS或BoxLayout.Y_AXIS
+         pv =new JPanel();
+         pv.setLayout(new BoxLayout(pv,BoxLayout.YAXis));
+         pv.add()
+  6. 空布局。首先调用容器的setLayout(null)将布局管理器设为空，setBounds(int x.int y,int width,int height)方法设置组件的位置和大小
 - 组合框JConboBox：void setSelectedIndex()设置默认选中   object getSelectedIem()获取选定要转为字符串；
 ActionEvent 和 ItemEvent 中都有getSource()方法；ItemEvent 还提供了getItem()的方法作用类似；
 
@@ -378,7 +391,7 @@ ActionEvent 和 ItemEvent 中都有getSource()方法；ItemEvent 还提供了get
 - 基础方法：
 
 ```java
- char charAt(int index)返回索引处字符  new Scanner(System.in).nextDouble输入double型 string独有(replace(old,new) toLowerCase()转小写 toUpperCase()大写 concat(str)str连接当前字符串尾部 valueOf(别的类型)将别的类型转换为字符串) capacity()返回当前容量【capacity|kəˈpæsəti容量能力】  Vector类中添加元素-addElement(obj) insertElementAt(obj，index)在index处插入obj elementAt(index)在index处的元素
+ char charAt(int index)返回索引处字符  new Scanner(System.in).nextDouble输入double型  string独有(replace(old,new) toLowerCase()转小写 toUpperCase()大写 concat(str)str连接当前字符串尾部 valueOf(别的类型)将别的类型转换为字符串) capacity()返回当前容量【capacity|kəˈpæsəti容量能力】  Vector类中添加元素-addElement(obj) insertElementAt(obj，index)在index处插入obj elementAt(index)在index处的元素
 ```
 
 - NumberFormat对数值格式化，不能用new实例化。NumberFormat.getInstance().format(myNumber)返回当前默认语言环境默认数值格式。  
