--- a/self_study/java/笔记.md
+++ b/self_study/java/笔记.md
@@ -1,7 +1,7 @@
 # 第一章 java概述
 
 - java程序类名：OneApp.java；编译后:OneApp.class；编译命令：javac，运行命令java。语言解释器是：java.exe，jdb调试器
-- 生僻的关键字：cast,const,future,generic|dʒəˈnerɪk类的.泛型,goto，instanceof,native,operator,rest,transient|trænziənt短暂的,volatile
+- 生僻的关键字：cast,const,future,generic|dʒəˈnerɪk类的.泛型,goto，instanceof,native,operator,rest,transient|træn ziən t短暂的,volatile
 - java语言特点：语法简单，功能强大，安全可靠;与平台无关;解释编译两种运行方式;多线程;动态执行兼有丰富的API文档及类库。
   1. 解释与平台无关：java编译器(javac.exe)将java程序编译成字节码文件，字节码文件运行在jvm上，只要安装了java运行环境的系统都可以执行这些代码.
   2. jvm(java虚拟机)：是一台虚拟计算器，通过实际计算机仿真模拟计算机各种功能来实现。类似小巧高效的CPU.
@@ -16,7 +16,7 @@
   1. 基本数据类型：整数类型(byte,short,int,long),浮点数类型(float,double),字符类型(char),布尔类型(boolean)
   2. 复合数据类型:类类型(class),数组,接口类型(interface)
 
-- 运算符：算术运算符(+ - ++),位运算符(& | ~(非，取反) >> >>>二进制进行按位运算),逻辑运算符(&& || !),关系运算符(> <= ==)
+- 运算符：算术运算符(+ - ++),位运算符(& | ~(非，取反) >> >>>二进制进行按位运算),逻辑运算符(&& || !),关系运算符(> ==)
 - 优先级：[] . ++ -- +(求正) - ~ * / + -
 
 - 标识符定义规则：标识符由字母，数字，下划线或美元符组成的字符串，其中数字不能作为标识符开头
@@ -28,20 +28,15 @@
 
 - 8进制，16进制转换为二进制再转换为10进制，**8进制逢8(000),10进制逢10()**,1>>>32相当于没有移动；
 
-<font color='red'>这是byte类型运算；在计算机中，数值一律用补码来表示和存储；正数原码就是补码，负数就是补码先反码加1</font>
+`<font color='red'>这是byte类型运算；在计算机中，数值一律用补码来表示和存储；正数原码就是补码，负数就是补码先反码加1</font>
 
     二进制原码-->二进制反码-->二进制补码()【开始位运算】-->二进制反码-->二进制补码 -->二进制原码
     正数>>2：
       正数的补码是本身，负数的补码是他的反码+1
-      1. 其正数的补码 = 原码)：正数的补码 = 原码（不用加1）
-     0001 0100(20)--> 0001 0100(20)--> 0000 0101(3)--> 0001 0100(20)--> 0001 0100(20)
-    负数补码：
-      1. {原码符号位不变} + {数值位按位取反后+1}
-      2. {原码符号位不变} + {数值位从右边数第一个1及其右边的0保持不变,左边安位取反}
     负数>>2)：其右移过程中，负数补1，正数补0---位运算过后，二进制取反加1.得出二进制原码
       -4>>2
       原码：10000000 00000000 00000000 00000100
-      反码：                           11111011//负3 11111100
+      反码：                           11111011//
       补码：11111111 11111111 11111111 11111100
       右移：11111111 11111111 11111111 11111111 //位移后的补码
       反码：10000000 00000000 00000000 00000000//加一后就是原码
@@ -68,6 +63,7 @@
       无符号右移31位，高位补0：
        00000000 00000000 00000000 00000001
     原码：00000000 00000000 00000000 00000001 =>1
+    -31>>30为-1  如果是无符号右移是1
   
 ## 第三章 流程控制语句
 
@@ -119,7 +115,7 @@
 - 构造方法不能从父类继承，构造函数应该为所有成员变量赋初值**构造方法的正常用途是初始化对象实例，默认的无参构造方法会把所有未初始化的成员变量设为默认值**；  继承关系中只能在子类的构造函数中的第一行调用父类的构造函数，用super(参数).this用来指明要操作的对象自身。类的对象也就是类的实例是类的特定成员
 
 - 实例方法可以相互调用，因为在同一个类中。实例方法不能调用静态方法，静态方法可以嗲用实例方法。
-- java程序调用方法，参数传送采用的是值传送<font color="blue">值传递和引用传递(其实还是值传递只是把实际参数（一个引用）拷贝一份赋值给形式参数，形式参数进行操作)</font>
+- java程序调用方法，参数传送采用的是值传送`<font color="blue">值传递和引用传递(其实还是值传递只是把实际参数（一个引用）拷贝一份赋值给形式参数，形式参数进行操作)</font>
 
 ### 简答题1
 
@@ -146,7 +142,7 @@
 
 ## 第五章 数组和字符串 trim()去除前后空格
 
-- String类不可被继承，因为有final修饰,申明对象是给他分配一个引用空间，实例是分配具体的空间，比如含100个元素的数组。MAX_VALUE最大，MIN_VALUE计算数组那个值最大的时候用。  二维数组的length属性只表示第一维长度，数组复制System.arraycopy(arr1,1,arr2,2,3)[1是复制开始的位置，2是目标数组小标，3是复制长度]
+- String类不可被继承，因为有final修饰,申明对象是给他分配一个引用空间，实例是分配具体的空间，比如含100个元素的数组。MAX_VALUE最大，MIN_VALUE计算数组那个值最大的时候用。  二维数组的length属性只表示第一维长度，数组复制`System.arraycopy(arr1,1,arr2,2,3)[1是复制开始的位置，2是目标数组小标，3是复制长度]`
 
 - 创建数组和数组静态初始化：
   1. 申明数组：int inA[]; double[] int;
@@ -194,10 +190,10 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
       B b=(B)a;a.类属性//就可以使用基类的属性了。
     }
 - **覆盖与多态**
-  1. 通过方法覆盖(只有继承)可以达到语言多态性目的。<font color="red">同名同参是覆盖，但是访问权限不能更严格___同名不同参叫重载(属于同一个类)</font>
+  1. 通过方法覆盖(只有继承)可以达到语言多态性目的。`<font color="red">同名同参是覆盖，但是访问权限不能更严格___同名不同参叫重载(属于同一个类)</font>
 
-- 终极方法也就是final修饰的不能被覆盖。<font color="green">终极变量是final修饰，常量是 static final</font>终极类不能被继承:保证一个方法指向String类的引用，是一个真正的String类型(比如string类)
-- **抽象类**：抽象类中有任何成员方法，(包括构造方法，抽象方法[只是方法的申明没有实现])，不能在非抽象类中定义抽象方法。<font color="blue">接口就是全部是抽象方法和常量（就是终极静态变量）</font> <font color="red">抽象类不能创建对象，只能继承或者对象转型来使用</font>
+- 终极方法也就是final修饰的不能被覆盖。`<font color="green">终极变量是final修饰，常量是 static final</font>终极类不能被继承:保证一个方法指向String类的引用，是一个真正的String类型(比如string类)
+- **抽象类**：抽象类中有任何成员方法，(包括构造方法，抽象方法[只是方法的申明没有实现])，不能在非抽象类中定义抽象方法。`<font color="blue">接口就是全部是抽象方法和常量（就是终极静态变量）</font> <font color="red">抽象类不能创建对象，只能继承或者对象转型来使用</font>
 - **接口实现**：implements关键字。
 
     普通类不能有抽象方法，实现类必须要完整的重写抽象类所有的方法。
@@ -205,7 +201,7 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
     接口与接口不能实现，接口可以继承，抽象类可以继承接口。接口可以多继承  
 
     java接口常量，抽象方法，构造方法(书上)
-- <font color="red">抽象类只实现接口中一个方法，继承抽象类的普通类也要实现全部</font>
+- `<font color="red">抽象类只实现接口中一个方法，继承抽象类的普通类也要实现全部</font>
 
 ### 多态
 
@@ -222,9 +218,9 @@ Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容
 
 ## 第七章 输入和输出流 要抛出异常
 
-- <font color="blue">基本字节数据流：文件数据流 ，过滤器数据流 ；基本字符流： 读者和写者</font>，File类不属于流，用于处理文件
+- `<font color="blue">基本字节数据流：文件数据流 ，过滤器数据流 ；基本字符流： 读者和写者</font>，File类不属于流，用于处理文件
 - 数据流指一组有顺序的，有起点和终点的字节集合。
-- io包提供了4个基本抽象类：<font color="red">InputStream , OutputStream ,Reader ,  Writer</font>
+- io包提供了4个基本抽象类：`<font color="red">InputStream , OutputStream ,Reader ,  Writer</font>
 - 输入数据流：
   1. int available()返回数据流中可读取的字节数(实际可能大于返回值).
   2. int read()输入流读取一个字节的二进制数据。is.read(b)就读到指定字节长度的内容，而返回的是字节长度int
