--- a/self_study/java/笔记.md
+++ b/self_study/java/笔记.md
@@ -156,11 +156,8 @@
   a[1][3]=3;（string也一样）
 
 - 空字符串：String s1 = new String();
-
-```java
-    string str1 = "";    //空字符串,分配了内存分配了一个空间
-    string str2 = null; //NULL  null：未分配内存
-```
+  >string str1 = "";    //空字符串,分配了内存分配了一个空间
+  string str2 = null; //NULL  null：未分配内存
 
 - String是不可变字符串，StringBuffer是可变字符串.Vector是变长字符串()，其中有构造方法
 Vector(初始容量)的空向量vector &emsp; 和 &emsp; Vector(初始容量,容量增量)的空向量vector
