--- a/self_study/java/笔记.md
+++ b/self_study/java/笔记.md
@@ -28,12 +28,13 @@
 
 - 8进制，16进制转换为二进制再转换为10进制，**8进制逢8(000),10进制逢10()**,1>>>32相当于没有移动；
 
-`<font color='red'>这是byte类型运算；在计算机中，数值一律用补码来表示和存储；正数原码就是补码，负数就是补码先反码加1</font>
+`<font color='red'>这是byte类型运算；在计算机中，数值一律用补码来表示和存储；正数原码就是补码，负数的补码就是正数的补码先反码加1</font>
 
-    二进制原码-->二进制反码-->二进制补码()【开始位运算】-->二进制反码-->二进制补码 -->二进制原码
+				java里面是循环移位的,就是说,向右移的东东会跑到最左边去 
+		补码范围：1000 0000b～0111 1111b【8位字长】
+		对应自的真值范围:-1000 0000b～+111 1111b, 即 -128d～ +127d
     正数>>2：
-      正数的补码是本身，负数的补码是他的反码+1
-    负数>>2)：其右移过程中，负数补1，正数补0---位运算过后，二进制取反加1.得出二进制原码
+    负数>>2)：负数其右移过程中，负数补1，正数补0---位运算过后，二进制取反加1.得出二进制原码
       -4>>2
       原码：10000000 00000000 00000000 00000100
       反码：                           11111011//
@@ -57,9 +58,9 @@
       ```
 
     负数:-2>>>31
-      原码：10000000 00000000 00000000 00000010
+      2的原码：10000000 00000000 00000000 00000010
       反码：11111111 11111111 11111111 11111101
-      补码：11111111 11111111 11111111 11111110
+      补码：11111111 11111111 11111111 11111110(计算机中的表示)
       无符号右移31位，高位补0：
        00000000 00000000 00000000 00000001
     原码：00000000 00000000 00000000 00000001 =>1
